<resources>
    <string name="app_name">Baking App</string>

    <string name="step_text">Step %1d - %1s</string>
    <string name="ingredient_text">%1d. %2d %1s, %2s \n\n</string>
    <string name="index_text">%1d / %2d</string>
    <string name="ingredient_label">Ingredients</string>
    <string name="steps_label">Steps</string>
    <string name="previous_step">Previous</string>
    <string name="next_step">Next</string>
    <string name="recipe_done">Done</string>
    <string name="steps_index_sample">5 / 32</string>
    <string name="step_description_sample">Lorem ipsum dolor sit amet, per iuvaret graecis cu, ius erat pertinax ad. No mei tale cetero repudiandae, ad quis luptatum his, ea vel bonorum invidunt comprehensam.</string>

    <string name="text_label_widget">Choose a recipe to see the ingredients at your home screen widget:</string>

    <string name="title_widget_setup">Widget Setup</string>

    <string name="error_no_internet">No Internet</string>
    <string name="error_fetch_failed">Failed to get data, please try again</string>
    <string name="error_fetch_failed_snack">Failed to get data.</string>

    <string name="label_snack_try_again">Try Again</string>
    <string name="label_snack_text">No Internet</string>

    <string name="label_content_desc_wifi">Wifi symbol with an exclamation signal</string>
    <string name="label_content_desc_error">Exclamation signal</string>

</resources>
